# playground-html-rust

./: Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
src/: cli.rs  lib.rs  main.rs
tests/: test.rs
